--- a/staticman.yml
+++ b/staticman.yml
@@ -5,6 +5,8 @@ comments:
   # not here is part of the request, an error will be thrown.
   allowedFields: ["name", "message", "parent_id"]
 
+  bannedDomains: ["https://jumboleadmagnet.com", "https://boostleadgeneration.com"]
+  
   # (*) REQUIRED
   #
   # Name of the branch being used. Must match the one sent in the URL of the
