--- a/staticman.yml
+++ b/staticman.yml
@@ -48,6 +48,8 @@ comments:
   # Destination path (directory) for the data files. Accepts placeholders.
   path: "_data/comments/{options.slug}"
 
+
+  pullRequestBody: "Hola,\n\nAquí hay una nueva entrada para su aprobación. :tada:\n\nCombine la solicitud de incorporación de cambios para aceptarla o ciérrela para eliminarla.\n\n:heart: Tu amigo [apps-bot](https://staticman.net) :muscle:\n\n---\n"
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
   requiredFields: ["name", "message"]
